# concept_based_rare_detector_2025

./: .gitignore  =0.26.0  Dockerfile  LICENSE  README.md  pyproject.toml
initial_documents/: documentation_detect_outliers_single_folder_ja.md  documentation_ja.md  documentation_models_ja.md  documentation_summary_ja.md  documentation_usage_ja.md  documentation_whole_architecture_batch_ja.md
projects/detect_rare_images/: Readme.md
projects/detect_rare_images/create_nuscenes_subset/: create_filtered_subset.py  create_filtered_subset_2folders.py  create_filtered_subset_by_category.py  create_nuscenes_subset.py  create_nuscenes_subset2.py  create_optimized_subset.py  inspect_pkl.py
projects/detect_rare_images/documentation/: # Code Citations.md  detect_outlier_single.md  improved_documentation.md  yolo_py.md
projects/detect_rare_images/initial_version/: architecture.py  clip_visualize-concepts.py.py  my-visualize-concepts.py  try-llava.py  try-qwen.py  whole-architecture.py  whole-architecture_batch.py  whole-architecture_batch_ok.py  whole-architecture_blip.py  whole-architecture_near_con.py  whole-architecture_prob.py  whole-architecture_vlm.py  whole-architecture_yolo.py
projects/detect_rare_images/initial_version/whole-architecture_ini/: concept_based_rare_detector.py  detect_improved.py  detect_outliers_single_folder.py  org_detect_single_folder.py
projects/detect_rare_images/utils/: truck_remove.py
projects/detect_rare_images/vision-language-model-project/: README.md  main.py
requirements/: requirements.in
(+10 files in other folders)
