[tool.black]
line-length = 119
force-exclude = '''
/(
\.git
| \.venv
| build
| work_dirs
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
line_length = 119
skip = ["work_dirs"]

[tool.poetry]
name = "rare-detection"
version = "0.1.0"
description = ""
authors = [""]


[tool.poetry.dev-dependencies]
jupyterlab = "^3.0.15"
jupyterlab-code-formatter = "^1.4.10"
black = "^21.5b1"


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
[tool.poetry.dependencies]
python = "^3.8"
requests = "^2.25.1"
flask = "^1.1.2"
openai = "0.28"
sentence_transformers = "*"
matplotlib = "*"
scikit-learn = "*"
numpy = "*"
python-dotenv = "*"